# Movie/src/main/java/pl/polsl/movie/entity/enums/AgeCategory.java
@@ -1,5 +1,10 @@
 package pl.polsl.movie.entity.enums;
 
 public enum AgeCategory {
-    PG13
+    PG13,
+    G_GENERAL_AUDIENCES,
+    PG_PARENTAL_GUIDANCE_SUGGESTED,
+    PG_13_PARENTS_STRONGLY_CAUTIONED,
+    R_RESTRICTED,
+    NC_17_ADULTS_ONLY;
 }
