# Movie/src/main/java/pl/polsl/movie/entity/enums/Category.java
@@ -1,5 +1,6 @@
 package pl.polsl.movie.entity.enums;
 
 public enum Category {
-    HORROR
+    HORROR, COMEDY, THRILLER, ROMANTIC_COMEDY, ANIMATION ,MILITARY,CRIME,FANTASY,SCI_FI
+
 }
